--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@
     width: 100%;
     top: 0;
     left: 0;
+    box-sizing: border-box;
   }
   
   .nav {
@@ -70,13 +71,16 @@
   }
   
   /* MOBILE */
-  @media (max-width: 768px) {
+  @media (max-width: 800px) {
     body {
       padding-top: 70px;
+      height: 100%;
+      width: 100%;
     }
   
     .header {
       height: 100%;
+      width: 100%;
     }
   
     .logo {
@@ -134,10 +138,9 @@ body{
 
 .presentacion{
     display: flex;
-    flex-wrap: wrap;
-    margin: 100px;
-    padding:100px ;
+    justify-content: center;
     font-size: 25px;
+    margin-top: 100px;
     color: #9e9480;
     height: 100%;
     width: 100%;
@@ -145,12 +148,19 @@ body{
 .presentacion p{
    text-align: center;
 }
-@media (max-width: 600px) {
-	.presentacion p{
-        font-size: 14px;
-        text-align: center;
+@media (max-width: 800px) {
+   .presentacion{
+       text-align: center;
+    
     }
-	}
+    .presentacion p{
+        display: flex;
+        justify-content: center;
+        padding: 10px 10px;
+        margin-top: 50px;
+     }
+    
+    }
 /* --------------------------------------------titulos cursos internacionales---------------------------------------------------------------*/
 .cursosint {
     margin-top: 50px;
@@ -324,7 +334,6 @@ font-size: 15px;
     width: 500px;
     height: 500px;
     border-radius: 10px;
-    box-shadow: 0 2px 2px cornsilk;
     overflow: hidden;
     margin: 20px;
     text-align: center;
@@ -380,7 +389,6 @@ font-size: 15px;
     width: 500px;
     height: 500px;
     border-radius: 10px;
-    box-shadow: 0 2px 2px cornsilk;
     overflow: hidden;
     margin: 20px;
     text-align: center;
@@ -489,4 +497,12 @@ font-size: 15px;
     color: white;
 }
 
+@media (max-width: 800px) {
+.redes-sociales{
+    display: none;
+}
+.link-footer{
+    display: none;
+}
+}
 /* --------------------------------------------------------------------------------------------------------------------*/ 
